--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,4 @@
-body{
-  background:red !important;
-  .App {
-    text-align: center;
-  }
-}
+@import '../public/elements/colors';
 
 .App-logo {
   height: 40vmin;
@@ -17,7 +12,7 @@ body{
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: $gray-100;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
